traces/bug_101.txt
examples++-load/isolineP1.cpp:335: error: DEAD_STORE
  The value written to &ii (type int) is never used.
Showing all 1 steps of the trace


examples++-load/isolineP1.cpp:335:5: Write of unused value
333.       
334.   
335.       int ii  = 2*it;
           ^
336.       int eT1 = taketriangle[2*it];
337.       int eT2 = taketriangle[2*it+1];
